syntax = "proto3";

package turnly.business_management.v1.tokens;

message CreateTokenRequest {
  string name = 1;
  repeated string scopes = 2;
}

message ExchangeTokenRequest {
  repeated string scopes = 2;
}


message GetTokenRequest {
  string secret = 1;
}
