syntax = "proto3";

package turnly.tenancy.v1.tokens;

import "common.proto";

message Token {
  string id = 1;
  string name = 2;
  repeated string scopes = 3;
  string secret = 4;
}

message CreateTokenResponse {
  Token data = 1;
  turnly.common.v1.Meta meta = 2;
}

message ExchangeTokenResponse {
  Token data = 1;
  turnly.common.v1.Meta meta = 2;
}

message GetTokenResponse {
  Token data = 1;
  turnly.common.v1.Meta meta = 2;
}
